--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -359,4 +359,5 @@
     <string name="new_event">Новая падзея</string>
     <string name="diplom_work">Дыпломная праца</string>
     <string name="phisology">Псіхалогія</string>
+    <string name="not_necessary">(Необязательно)</string>
 </resources>
