--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -359,4 +359,5 @@ scorri verso destra, puoi rimuovere un elemento dall\'elenco delle spese frequen
     <string name="new_event">Nuovo evento</string>
     <string name="diplom_work">Tesi di laurea</string>
     <string name="phisology">Psicologia</string>
+    <string name="not_necessary">(Необязательно)</string>
 </resources>
